Start making Linux wrapper, clean Java code